# lsp-asm

./: .gitignore  LICENSE  README.md
.cargo/: config
clients/code/: .gitignore  package-lock.json  package.json  tsconfig.json
clients/code/src/: config.ts  extension.ts  notifications.ts
clients/emacs/: lsp-asm.el
crates/arch/: Cargo.toml
crates/arch/src/: lib.rs  register_names.rs  registers.rs
crates/base/: Cargo.toml
crates/base/src/: architecture.rs  filetype.rs  lib.rs  register.rs  rwlock.rs
crates/bdd-tests/: Cargo.toml
crates/bdd-tests/features/: aarch64-doc-hover.feature  assembler-flags.feature  codeaction-arch-directive.feature  codelens-loc.feature  doc-comment.feature  doc-hover.feature  document-highlight.feature  document-symbols.feature  equ.feature  find-references.feature  full-sync.feature  goto-definition.feature  included-files.feature  incremental.feature  internal-directives-completion.feature  label-completion.feature  mnemonic-completion.feature  objdump-offset-hint.feature  objdump.feature  register-completion.feature  register-highlights.feature  rename.feature  semantic-tokens.feature  signature.feature  syntax-tree.feature
crates/bdd-tests/features/flags/: main.s  test.s
crates/bdd-tests/features/known-defs/: aarch64.json
crates/bdd-tests/features/test-files/: .dir-locals.el  file_a.s  file_b.s  file_c.s  lens.txt  local-labels.s  multiple-functions.s  objdump.s
crates/bdd-tests/src/: command.rs  file.rs  position.rs  runner.rs  server.rs  steps.rs  util.rs
crates/codeactions/: Cargo.toml
crates/codeactions/src/: lib.rs  lsp_asm_arch_directive.rs
crates/documentation/: Cargo.toml
crates/documentation-builder/: Cargo.toml
crates/documentation-builder/src/: aarch64.rs  lib.rs  register_replacements.rs  util.rs
crates/documentation/src/: access.rs  lib.rs  map.rs  registers.rs  templates.rs
crates/documentation/src/tests/: access.rs  mod.rs  templates.rs  util.rs
crates/fmt/: Cargo.toml
crates/fmt/src/: align_first_operand.rs  bracket_space.rs  comma_space.rs  const_def_align.rs  indent.rs  label_newline.rs  lib.rs  space_around_operators.rs  test_util.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: capabilities.rs  config.rs  file_util.rs  lib.rs  lsp.rs  main.rs  threadpool.rs  types.rs
crates/lsp/src/asm/: ast.rs  builder.rs  combinators.rs  config.rs  debug.rs  definition.rs  demangle.rs  diff.rs  error.rs  handler.rs  hovers.rs  inlay_hints.rs  llvm_mca.rs  mod.rs  objdump_util.rs  parser.rs  references.rs  register_names.rs  registers.rs  signature.rs  span.rs
crates/lsp/src/asm/test/: aarch64.rs  asm.rs  incomplete.rs  mod.rs  objdump.rs  x86_64.rs
crates/lsp/src/completion/: internal_directives.rs  label.rs  mnemonic.rs  mod.rs  registers.rs  value_list.rs
crates/lsp/src/diagnostics/: assembler_flags.rs  clang.rs  compile_commands.rs  gcc.rs  mod.rs  util.rs
crates/lsp/src/documentation/: access.rs  mod.rs  registers.rs  templates.rs
crates/lsp/src/documentation/tests/: mod.rs  util.rs
crates/lsp/src/handler/: context.rs  error.rs  ext.rs  file_graph.rs  handlers.rs  mod.rs  semantic.rs  types.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/parser/: Cargo.toml
crates/parser/src/: builder.rs  combinators.rs  config.rs  equ.rs  include.rs  lib.rs
crates/syntax/: Cargo.toml
crates/syntax/src/: alias.rs  ast.rs  edit.rs  lib.rs  utils.rs
xtask/: Cargo.toml
xtask/src/: commands.rs  main.rs
