[package]
name = "xtask"
version = "0.1.0"
authors = ["Jamie Cunliffe <Jamie.Cunliffe@outlook.com>"]
edition = "2021"

[dependencies]
pretty_env_logger = "0.4.0"
clap = { version = "3.2.5", features = ["derive"] }
tokio = { version = "1.19.2", features = ["full"] }
documentation-builder = { path = "../crates/documentation-builder" }
