[package]
name = "xtask"
version = "0.1.0"
authors = ["Jamie Cunliffe <Jamie.Cunliffe@outlook.com>"]
edition = "2021"

[dependencies]
pretty_env_logger = "0.4.0"
clap = { version = "4.2.1", features = ["derive"] }
tokio = { version = "1.27.0", default-features = false, features = ["rt-multi-thread", "sync"] }
documentation-builder = { path = "../crates/documentation-builder" }
