[package]
name = "base"
version = "0.1.0"
edition = "2021"

[dependencies]
macros = { path = "../macros" }
log = "0.4.17"
serde = { version = "1.0.147", features = ["derive"] }
once_cell = "1.16.0"
regex = "1.7.0"
bitflags = "1.3.2"
tokio = { version = "1.22.0", default-features = false, features = ["sync"] }
