[package]
name = "base"
version = "0.1.0"
edition = "2021"

[dependencies]
macros = { path = "../macros" }
log = "0.4.17"
serde = { version = "1.0.159", features = ["derive"] }
once_cell = "1.17.1"
regex = "1.7.3"
bitflags = "2.1.0"
tokio = { version = "1.27.0", default-features = false, features = ["sync"] }
