[package]
name = "base"
version = "0.1.0"
edition = "2021"

[dependencies]
macros = { path = "../macros" }
log = "0.4.19"
serde = { version = "1.0.178", features = ["derive"] }
once_cell = "1.18.0"
regex = "1.9.1"
bitflags = "2.3.3"
tokio = { version = "1.29.1", default-features = false, features = ["sync"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
