[package]
name = "z-bdd-tests"
version = "0.1.0"
edition = "2021"

[[test]]
name = "bdd-tests"
path = "src/runner.rs"
harness = false

[dev-dependencies]
base = { path = "../base" }
documentation = { path = "../documentation", features = ["poison"] }
lsp-asm = { path = "../lsp" }
cucumber = "0.17.0"
tokio = { version = "1.22.0", default-features = false, features = ["macros", "rt-multi-thread"] }
lsp-types = { version = "0.93.2", features = ["proposed"] }
lsp-server = "0.6.0"
serde_json = "1.0.89"
serde = { version = "1.0.147", features = ["derive"] }
pretty_assertions = "1.3.0"
pretty_env_logger = "0.4.0"
parking_lot = "0.12.1"
itertools = "0.10.5"
