[package]
name = "z-bdd-tests"
version = "0.1.0"
edition = "2021"

[[test]]
name = "bdd-tests"
path = "src/runner.rs"
harness = false

[dev-dependencies]
base = { path = "../base" }
documentation = { path = "../documentation", features = ["poison"] }
lsp-asm = { path = "../lsp" }
cucumber = "0.19.1"
tokio = { version = "1.27.0", default-features = false, features = ["macros", "rt-multi-thread"] }
lsp-types = { version = "0.94.0", features = ["proposed"] }
lsp-server = "0.7.0"
serde_json = "1.0.95"
serde = { version = "1.0.159", features = ["derive"] }
pretty_assertions = "1.3.0"
pretty_env_logger = "0.4.0"
parking_lot = "0.12.1"
itertools = "0.10.5"
