[package]
name = "codeactions"
version = "0.1.0"
edition = "2021"

[dependencies]
base = { path = "../base" }
syntax = { path = "../syntax" }
parser = { path = "../parser" }
arch = { path = "../arch" }
rowan = "0.15.11"
regex = "1.9.1"
once_cell = "1.18.0"
log = "0.4.19"

[dev-dependencies]
pretty_assertions = "1.4.0"
