[package]
name = "documentation-builder"
version = "0.1.0"
authors = ["Jamie Cunliffe <Jamie.Cunliffe@outlook.com>"]
edition = "2021"

[dependencies]
base = { path = "../base" }
documentation = { path = "../documentation" }
roxmltree = "0.14.1"
flate2 = "1.0.23"
tar = "0.4.38"
reqwest = "0.11.10"
itertools = "0.10.3"
serde_json = "1.0.81"
serde = { version = "1.0.137", features = ["derive"] }
directories = "4.0.1"
log = "0.4.17"
textwrap = "0.15.0"

[dev-dependencies]
pretty_assertions = "1.2.1"
