[package]
name = "documentation-builder"
version = "0.1.0"
authors = ["Jamie Cunliffe <Jamie.Cunliffe@outlook.com>"]
edition = "2021"

[dependencies]
base = { path = "../base" }
documentation = { path = "../documentation" }
roxmltree = "0.18.0"
flate2 = "1.0.25"
tar = "0.4.38"
reqwest = "0.11.16"
itertools = "0.10.5"
serde_json = "1.0.95"
serde = { version = "1.0.159", features = ["derive"] }
directories = "5.0.0"
log = "0.4.17"
textwrap = "0.16.0"

[dev-dependencies]
pretty_assertions = "1.3.0"
