[package]
name = "documentation-builder"
version = "0.1.0"
authors = ["Jamie Cunliffe <Jamie.Cunliffe@outlook.com>"]
edition = "2021"

[dependencies]
base = { path = "../base" }
documentation = { path = "../documentation" }
roxmltree = "0.18.0"
flate2 = "1.0.26"
tar = "0.4.39"
reqwest = "0.11.18"
itertools = "0.11.0"
serde_json = "1.0.104"
serde = { version = "1.0.178", features = ["derive"] }
directories = "5.0.1"
log = "0.4.19"
textwrap = "0.16.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
