[package]
name = "documentation"
version = "0.1.0"
edition = "2021"

[dependencies]
base = { path = "../base" }
syntax = { path = "../syntax" }
parser = { path = "../parser" }
arch = { path = "../arch" }
log = "0.4.17"
itertools = "0.10.5"
serde_json = "1.0.89"
serde = { version = "1.0.147", features = ["derive"] }
directories = "4.0.1"
once_cell = "1.16.0"
either = { version = "1.8.0", features = ["serde" ] }
phf = { version = "0.11.1", features = ["macros"] }
phf_macros = { version = "0.11.1", features = ["unicase"] }
unicase = "2.6.0"

[dev-dependencies]
pretty_assertions = "1.3.0"

[features]
default = []
poison = []
