[package]
name = "documentation"
version = "0.1.0"
edition = "2021"

[dependencies]
base = { path = "../base" }
syntax = { path = "../syntax" }
parser = { path = "../parser" }
arch = { path = "../arch" }
log = "0.4.19"
itertools = "0.11.0"
serde_json = "1.0.104"
serde = { version = "1.0.178", features = ["derive"] }
directories = "5.0.1"
once_cell = "1.18.0"
either = { version = "1.9.0", features = ["serde" ] }
phf = { version = "0.11.2", features = ["macros"] }
phf_macros = { version = "0.11.2", features = ["unicase"] }
unicase = "2.6.0"

[dev-dependencies]
pretty_assertions = "1.4.0"

[features]
default = []
poison = []
