[package]
name = "fmt"
version = "0.1.0"
edition = "2021"

[dependencies]
base = { path = "../base" }
syntax = { path = "../syntax" }
parser = { path = "../parser" }
arch = { path = "../arch" }
rowan = "0.15.10"
serde = { version = "1.0.147", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1.3.0"
