[package]
name = "lsp-asm"
version = "0.1.0"
authors = ["Jamie Cunliffe <Jamie.Cunliffe@outlook.com>"]
edition = "2021"

[[bin]]
name = "lsp-asm"
path = "src/bin/main.rs"

[dependencies]
base = { path = "../base" }
syntax = { path = "../syntax" }
parser = { path = "../parser" }
documentation = { path = "../documentation" }
arch = { path = "../arch" }
fmt = { path = "../fmt" }
log = "0.4.17"
pretty_env_logger = "0.4.0"
regex = "1.7.0"
either = "1.8.0"
lsp-server = "0.6.0"
lsp-types = { version = "0.93.2", features = ["proposed"] }
serde_json = "1.0.89"
serde = { version = "1.0.147", features = ["derive"] }
toml = { version = "0.5.9", default-features = false }
rowan = "0.15.10"
itertools = "0.10.5"
rayon = "1.6.0"
once_cell = "1.16.0"
byte-unit = { version = "4.0.17", default-features = false, features = ["std", "serde"] }
shellwords = "1.1.0"
uuid = { version = "1.2.2", features = ["v4"] }
rustc-demangle = "0.1.21"
cpp_demangle = "0.4.0"
phf = { version = "0.11.1", features = ["macros"] }
phf_macros = { version = "0.11.1", features = ["unicase"] }
unicase = "2.6.0"
dissimilar = "1.0.4"
petgraph = "0.6.2"
crossbeam-channel = "0.5.6"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5.0"

[dev-dependencies]
pretty_assertions = "1.3.0"
