[package]
name = "lsp-asm"
version = "0.1.0"
authors = ["Jamie Cunliffe <Jamie.Cunliffe@outlook.com>"]
edition = "2021"

[[bin]]
name = "lsp-asm"
path = "src/bin/main.rs"

[dependencies]
base = { path = "../base" }
syntax = { path = "../syntax" }
parser = { path = "../parser" }
documentation = { path = "../documentation" }
arch = { path = "../arch" }
fmt = { path = "../fmt" }
codeactions = { path = "../codeactions" }
log = "0.4.17"
pretty_env_logger = "0.4.0"
regex = "1.7.3"
either = "1.8.1"
lsp-server = "0.7.0"
lsp-types = { version = "0.94.0", features = ["proposed"] }
serde_json = "1.0.95"
serde = { version = "1.0.159", features = ["derive"] }
toml = { version = "0.7.3", default-features = false, features = ["parse"] }
rowan = "0.15.11"
itertools = "0.10.5"
rayon = "1.7.0"
once_cell = "1.17.1"
byte-unit = { version = "4.0.19", default-features = false, features = ["std", "serde"] }
shellwords = "1.1.0"
uuid = { version = "1.3.0", features = ["v4"] }
rustc-demangle = "0.1.22"
cpp_demangle = "0.4.0"
phf = { version = "0.11.1", features = ["macros"] }
phf_macros = { version = "0.11.1", features = ["unicase"] }
unicase = "2.6.0"
dissimilar = "1.0.6"
petgraph = "0.6.3"
crossbeam-channel = "0.5.7"
mimalloc = { version = "0.1.36", default-features = false }

[dev-dependencies]
pretty_assertions = "1.3.0"
