[package]
name = "lsp-asm"
version = "0.1.0"
authors = ["Jamie Cunliffe <Jamie.Cunliffe@outlook.com>"]
edition = "2021"

[[bin]]
name = "lsp-asm"
path = "src/bin/main.rs"

[dependencies]
base = { path = "../base" }
syntax = { path = "../syntax" }
parser = { path = "../parser" }
documentation = { path = "../documentation" }
arch = { path = "../arch" }
fmt = { path = "../fmt" }
codeactions = { path = "../codeactions" }
log = "0.4.19"
pretty_env_logger = "0.5.0"
regex = "1.9.1"
either = "1.9.0"
lsp-server = "0.7.2"
lsp-types = { version = "0.94.0", features = ["proposed"] }
serde_json = "1.0.104"
serde = { version = "1.0.178", features = ["derive"] }
toml = { version = "0.7.6", default-features = false, features = ["parse"] }
rowan = "0.15.11"
itertools = "0.11.0"
rayon = "1.7.0"
once_cell = "1.18.0"
byte-unit = { version = "4.0.19", default-features = false, features = ["std", "serde"] }
shellwords = "1.1.0"
uuid = { version = "1.4.1", features = ["v4"] }
rustc-demangle = "0.1.23"
cpp_demangle = "0.4.2"
phf = { version = "0.11.2", features = ["macros"] }
phf_macros = { version = "0.11.2", features = ["unicase"] }
unicase = "2.6.0"
dissimilar = "1.0.7"
petgraph = "0.6.3"
crossbeam-channel = "0.5.8"
mimalloc = { version = "0.1.37", default-features = false }

[dev-dependencies]
pretty_assertions = "1.4.0"
